<resources>
    <string name="app_name">PlayLyst</string>
    <string name="spotify_login_button">Login with Spotify</string>
    <string name="app_description">Create your own customizable playlists based on your mood and make
        your listening experience even more enjoyable.</string>

    <string name="button_save">Save</string>

    <string name="bottom_nav_playlists_title">Playlists</string>
    <string name="bottom_nav_moods_title">Moods</string>
    <string name="bottom_nav_create_new_title">Create</string>
    <string name="mood_choose_color_name">Type in color to associate with the mood, or click the circle</string>
    <string name="mood_choose_name">Call your mood something interesting</string>
    <string name="hello_blank_fragment">blank</string>

    <string name="playlists_title">Playlists</string>
    <string name="create_playlist_title">Create playlist</string>
    <string name="moods_title">Moods</string>
    <string name="create_mood_title">Create mood</string>
    <string name="edit_playlist_title">Edit playlist</string>
    <string name="edit_mood_title">Edit mood</string>
    <string name="invalid_color_input">Not a valid hex code</string>
    <string name="empty_field">Field cannot be empty</string>

    <string name="empty_playlists">There are no playlists <i>yet</i>. Try to create one now!</string>

    <string name="create_playlist_choose_songs">Search songs</string>
    <string name="create_playlist_description">Choose up to 5 seeds (song and genres) to generate a playlist from.</string>
    <string name="create_playlist_include_songs">Include seeder songs in the playlist</string>
    <string name="create_playlist_save_button">Generate playlist</string>
    <string name="create_playlist_choose_tags">Choose genres to include</string>
    <string name="create_playlist_choose_mood">Customize the mood?</string>
    <string name="create_playlist_mood_button">Choose mood</string>
    <string name="create_playlist_upload_image_button">Choose image</string>
    <string name="create_playlist_change_image_button">Change image</string>
    <string name="create_playlist_playlist_name_helper_text">Choose a name for your new playlist</string>

    <string name="delete_playlist_dialog_title">Delete playlist</string>
    <string name="delete_playlist_dialog_message">Do you really want to delete this playlist?</string>
    <string name="delete_playlist_pos_button">Delete</string>
    <string name="delete_playlist_neg_button">Cancel</string>

    <string name="no_internet_dialog_title">No internet connection</string>
    <string name="no_internet_dialog_message">Please check you internet connection and try again.</string>
    <string name="no_internet_pos_button">Retry</string>
    <string name="no_internet_neg_button">Cancel</string>
</resources>