<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlists.create.PlaylistCreateFragment">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/create_playlist_choose_songs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_playlist_song" />

    <Button
        android:id="@+id/search_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chosen_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/include_title"
        tools:listitem="@layout/item_playlist_song" />

    <TextView
        android:id="@+id/include_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_playlist_include_songs"
        android:textAppearance="@style/CircularTextAppearance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/chosen_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/include_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/chosen_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/genres_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/create_playlist_choose_tags"
        android:textAppearance="@style/CircularTextAppearance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/include_title"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <HorizontalScrollView
        android:id="@+id/genres_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/genres_title">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genres_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="false"
            app:singleSelection="false" >
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/create_playlist_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>